@startuml
title Storage Component - Class Diagram
hide circle
skinparam classAttributeIconSize 0
class Storage {
    - filePath: Path
    __
    + Storage(filePath: String)
    + load(): ArrayList<Internship>
    + save(internships: ArrayList<Internship>): void
}

class InternshipList {
    - {static} username: String
    __
    + {static} setStorage(storageInstance: Storage): void
    + {static} loadFromStorage(): void
    + {static} saveToStorage(): void
    + {static} add(item: Internship): void
    + {static} delete(index: int): void
    + {static} get(index: int): Internship
    + {static} size(): int
}

class Internship {
    - company: String
    - role: String
    - deadline: Date
    - pay: int
    - status: String
    __
    + Internship(company: String, role: String, deadline: Date, pay: int)
    + getCompany(): String
    + getRole(): String
    + getDeadline(): Date
    + getPay(): int
    + getStatus(): String
    + setStatus(status: String): void
    + {static} isValidStatus(status: String): boolean
}

class DateFormatter {
    + {static} parse(dateStr: String): Date
}

class InternityException {
    + InternityException(message: String)
}

note as NoteStorage
  File Format:
  Line 1: "Username (in line below):"
  Line 2: <username>
  Line 3+: company | role | DD-MM-YYYY | pay | status

  Features:
  - Auto-creates parent directories
  - Skips corrupted lines with warnings
  - Validates date, pay, and status
end note

Storage ..> NoteStorage
Storage ..> Internship
Storage ..> DateFormatter
Storage ..> InternityException
InternshipList "1" - "1" Storage : uses >
InternshipList *-- "*" Internship

@enduml